RESOLVED FIXED153899
AX: WebKit hanging when VoiceOver attempts to focus in on page
https://bugs.webkit.org/show_bug.cgi?id=153899
Summary AX: WebKit hanging when VoiceOver attempts to focus in on page
Nan Wang
Reported 2016-02-04 15:42:51 PST
WebKit seems to hang when VoiceOver attempts to query for the endTextMarker of a page that has attachments at the end.
Attachments
patch (4.92 KB, patch)
2016-02-04 16:05 PST, Nan Wang
no flags
Nan Wang
Comment 1 2016-02-04 15:43:03 PST
Radar WebKit Bug Importer
Comment 2 2016-02-04 15:43:26 PST
Nan Wang
Comment 3 2016-02-04 16:05:48 PST
WebKit Commit Bot
Comment 4 2016-02-05 00:53:57 PST
Comment on attachment 270702 [details] patch Clearing flags on attachment: 270702 Committed r196167: <http://trac.webkit.org/changeset/196167>
WebKit Commit Bot
Comment 5 2016-02-05 00:54:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.