AX: WebKit hanging when VoiceOver attempts to focus in on page https://bugs.webkit.org/show_bug.cgi?id=153899 <rdar://problem/24506603>

Reviewed by Chris Fleizach.

Source/WebCore:

The VisiblePosition to CharacterOffset conversion will lead to an infinite loop if the
nextVisiblePostion call is returning the original VisiblePosition. Fixed it by breaking out
of the loop early in that situation.

Test: accessibility/text-marker/character-offset-visible-position-conversion-hang.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::characterOffsetFromVisiblePosition):

LayoutTests:

* accessibility/text-marker/character-offset-visible-position-conversion-hang-expected.txt: Added.
* accessibility/text-marker/character-offset-visible-position-conversion-hang.html: Added.


Canonical link: https://commits.webkit.org/172005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196167 268f45cc-cd09-0410-ab3c-d52691b4dbfc