Source/WebCore/accessibility/AXObjectCache.cpp
@@ -1753,9 +1753,15 @@ CharacterOffset AXObjectCache::characterOffsetFromVisiblePosition(AccessibilityO
     int characterOffset = 0;
     Position vpDeepPos = vp.deepEquivalent();
     
+    VisiblePosition previousVisiblePos;
     while (!vpDeepPos.isNull() && !deepPos.equals(vpDeepPos)) {
+        previousVisiblePos = vp;
         vp = obj->nextVisiblePosition(vp);
         vpDeepPos = vp.deepEquivalent();
+        // Sometimes nextVisiblePosition will give the same VisiblePostion,
+        // we break here to avoid infinite loop.
+        if (vpDeepPos.equals(previousVisiblePos.deepEquivalent()))
+            break;
         characterOffset++;
     }
     
